# cli-master

./: .cursorrules  .env.example  .gitignore  AGENT.md  CLAUDE.md  README.md  main.py  pyproject.toml
cli_master/: __init__.py  agent.py  commands.py  config.py  history.py  main.py  models.py  registry.py  researcher.py  safe_path.py  tools.py
cli_master/ai/: __init__.py  agent.py  researcher.py
cli_master/ai/tools/: __init__.py  filesystem.py  todo.py
cli_master/cli/: __init__.py  commands.py
cli_master/core/: __init__.py  config.py  log.py  models.py
cli_master/repository/: __init__.py  checkpoint.py  prompt_history.py
docs/test/: README.md
src/: __init__.py  agent.py  commands.py  completer.py  config.py  history.py  log.py  models.py  tool_metadata.py  tool_selector.py  tools.py
src/storage/: __init__.py  sql_history.py  sqlite_store.py  vector_store.py
tests/: conftest.py  e2e_helpers.py  test_commands.py  test_e2e_cli.py  test_plan_execute.py  test_registry.py  test_researcher.py  test_safe_path.py  test_tool_selector.py
