[project]
name = "cli-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-google-vertexai>=3.2.0",
    "langgraph>=0.2.0",
    "prompt-toolkit>=3.0.52",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
