[project]
name = "cli-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-google-vertexai>=3.2.0",
    "langgraph>=0.2.0",
    "prompt-toolkit>=3.0.52",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
    "loguru>=0.7.0",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "aiosqlite>=0.22.1",
]

[project.scripts]
cli-master = "cli_master.main:main"

[project.optional-dependencies]
dev = [
    "pexpect>=4.9.0",
    "pytest>=8.0.0",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["cli_master"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pexpect>=4.9.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
